with random forest

--- a/classification/h5a3_confidence_and_memory.ipynb
+++ b/classification/h5a3_confidence_and_memory.ipynb
@@ -350,9 +350,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "LELEC210X",
+   "display_name": ".venv",
    "language": "python",
-   "name": "lelec210x"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -365,11 +365,6 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.18"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "46df200377d403be22c796785365123e6a374b5da08e8292e6b2afda659c5a28"
-   }
   }
  },
  "nbformat": 4,
