data augmentation and classification modif advancement

--- a/classification/h5a1_toy.ipynb
+++ b/classification/h5a1_toy.ipynb
@@ -622,9 +622,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "LELEC210X",
+   "display_name": ".venv",
    "language": "python",
-   "name": "lelec210x"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
