--- a/classification/model.ipynb
+++ b/classification/model.ipynb
@@ -2,17 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "ename": "",
-     "evalue": "",
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'classification.datasets'",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31mRunning cells with '.venv (Python 3.12.8)' requires the ipykernel package.\n",
-      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
-      "\u001b[1;31mCommand: 'c:/Users/pierr/.venv/Scripts/python.exe -m pip install ipykernel -U --force-reinstall'"
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 14\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmodel_selection\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m StratifiedKFold, train_test_split\n\u001b[0;32m     12\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mneighbors\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m KNeighborsClassifier\n\u001b[1;32m---> 14\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mclassification\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdatasets\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Dataset\n\u001b[0;32m     15\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mclassification\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mutils\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01maudio_student\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m AudioUtil, Feature_vector_DS\n\u001b[0;32m     17\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mclassification\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mutils\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mplots\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m (\n\u001b[0;32m     18\u001b[0m     plot_decision_boundaries,\n\u001b[0;32m     19\u001b[0m     plot_specgram,\n\u001b[0;32m     20\u001b[0m     show_confusion_matrix,\n\u001b[0;32m     21\u001b[0m )\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'classification.datasets'"
      ]
     }
    ],
@@ -71,6 +72,7 @@
    "source": [
     "### TO RUN\n",
     "fm_dir = \"data/feature_matrices/\"  # where to save the features matrices\n",
+    "new_dataset_dir = \"src/classification/datasets/new_dataset/melvecs/\"\n",
     "model_dir = \"data/models/\"  # where to save the models\n",
     "os.makedirs(fm_dir, exist_ok=True)\n",
     "os.makedirs(model_dir, exist_ok=True)"
@@ -105,7 +107,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### TO RUN\n",
+    "# TRANSFORMATION ON FEATURE VECTOR\n",
+    "\n",
+    "def add_noise(feature_vector, snr_db=20):\n",
+    "    \"\"\"Adds white noise to a feature vector based on the given SNR (Signal-to-Noise Ratio).\"\"\"\n",
+    "    power_signal = np.mean(feature_vector ** 2)\n",
+    "    power_noise = power_signal / (10 ** (snr_db / 10))\n",
+    "    noise = np.random.normal(0, np.sqrt(power_noise), feature_vector.shape)\n",
+    "    return feature_vector + noise\n",
+    "\n",
+    "def shifting(feature_vector, shift_max=20):\n",
+    "    \"\"\"Shifts mel spectrogram feature vectors along the time axis by a random shift between 0 and shift_max.\"\"\"\n",
+    "    shift = np.random.randint(0, shift_max)\n",
+    "    return np.roll(feature_vector, shift, axis=0)  # Rolling along the first axis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### FEATURE EXTRACTION FROM SOUND\n",
     "\"Random split of 70:30 between training and validation\"\n",
     "train_pct = 0.7\n",
     "\n",
@@ -118,7 +141,6 @@
     "data_aug_factor = 1\n",
     "class_ids_aug = np.repeat(classnames, naudio * data_aug_factor)\n",
     "\n",
-    "\"\"\"\n",
     "X = np.zeros((data_aug_factor * nclass * naudio, featveclen))\n",
     "for s in range(data_aug_factor):\n",
     "    for class_idx, classname in enumerate(classnames):\n",
@@ -128,13 +150,54 @@
     "np.save(fm_dir + \"X_basic.npy\", X)\n",
     "y = class_ids_aug.copy()\n",
     "np.save(fm_dir + \"y_basic.npy\", y)\n",
-    "\"\"\"\n",
     "\n",
-    "X = np.load(fm_dir+\"X_basic.npy\")\n",
-    "y = np.load(fm_dir+\"y_basic.npy\")\n",
+    "print(f\"Shape of the basic feature matrix : {X.shape}\")\n",
+    "print(f\"Number of labels : {len(y)}\")\n",
     "\n",
-    "print(f\"Shape of the feature matrix : {X.shape}\")\n",
-    "print(f\"Number of labels : {len(y)}\")"
+    "\n",
+    "# FEATURE EXTRACTION FROM FILE\n",
+    "\n",
+    "naudio_new = 40\n",
+    "\n",
+    "X_new_dataset = []\n",
+    "y_new_dataset = []\n",
+    "X_new_dataset_aug = []\n",
+    "y_new_dataset_aug = []\n",
+    "\n",
+    "for classname in classnames:\n",
+    "    for idx in range(1, naudio_new + 1):  # Assuming files are named from 1 to 40\n",
+    "        file_path = os.path.join(new_dataset_dir, f\"{classname}_{idx:02d}.npy\")\n",
+    "        if os.path.exists(file_path):\n",
+    "            featvec = np.load(file_path)\n",
+    "            featvec_shifted = shifting(featvec)  # Apply shifting transformation\n",
+    "            featvec_noisy = add_noise(featvec)  # Apply noise transformation\n",
+    "            X_new_dataset.append(featvec.flatten())\n",
+    "            y_new_dataset.append(classname)\n",
+    "            \n",
+    "            X_new_dataset_aug.append(featvec.flatten())\n",
+    "            X_new_dataset_aug.append(featvec_shifted.flatten())\n",
+    "            X_new_dataset_aug.append(featvec_noisy.flatten())\n",
+    "            y_new_dataset_aug.append(classname)\n",
+    "            y_new_dataset_aug.append(classname)\n",
+    "            y_new_dataset_aug.append(classname)\n",
+    "        else:\n",
+    "            print(f\"Warning: File {file_path} not found.\")\n",
+    "\n",
+    "X_new_dataset = np.array(X_new_dataset)\n",
+    "y_new_dataset = np.array(y_new_dataset)\n",
+    "X_new_dataset_aug = np.array(X_new_dataset_aug)\n",
+    "y_new_dataset_aug = np.array(y_new_dataset_aug)\n",
+    "\n",
+    "np.save(fm_dir + \"X_new_dataset.npy\", X_new_dataset)\n",
+    "np.save(fm_dir + \"y_new_dataset.npy\", y_new_dataset)\n",
+    "np.save(fm_dir + \"X_new_dataset_aug.npy\", X_new_dataset_aug)\n",
+    "np.save(fm_dir + \"y_new_dataset_aug.npy\", y_new_dataset_aug)\n",
+    "\n",
+    "print(f\"Shape of the new feature matrix: {X_new_dataset.shape}\")\n",
+    "print(f\"Number of labels in new dataset: {len(y_new_dataset)}\")\n",
+    "\n",
+    "print(f\"Shape of the new feature matrix with data augmentation: {X_new_dataset_aug.shape}\")\n",
+    "print(f\"Number of labels in new dataset with data augmentation: {len(y_new_dataset_aug)}\")"
    ]
   },
   {
@@ -154,19 +217,21 @@
     "list_augmentation = [\"original\", \"noise\", \"echo\", \"shifting\"]\n",
     "myds.mod_data_aug(list_augmentation)\n",
     "print(\"Number of transformations : \", myds.data_aug_factor)\n",
-    "y_aug = np.repeat(classnames, dataset.naudio * myds.data_aug_factor)\n",
-    "X_aug = np.zeros((myds.data_aug_factor * nclass * naudio, featveclen))\n",
+    "y_basic_aug = np.repeat(classnames, dataset.naudio * myds.data_aug_factor)\n",
+    "X_basic_aug = np.zeros((myds.data_aug_factor * nclass * naudio, featveclen))\n",
     "\n",
     "for s in range(len(list_augmentation)):\n",
     "    aug = list_augmentation[s]\n",
     "    for idx in range(dataset.naudio):\n",
     "        for class_idx, classname in enumerate(classnames):\n",
     "            featvec = myds[classname, idx, aug]\n",
-    "            X_aug[s * nclass * naudio + class_idx * naudio + idx, :] = featvec\n",
-    "            y_aug[s * nclass * naudio + class_idx * naudio + idx] = classname\n",
+    "            X_basic_aug[s * nclass * naudio + class_idx * naudio + idx, :] = featvec\n",
+    "            y_basic_aug[s * nclass * naudio + class_idx * naudio + idx] = classname\n",
     "\n",
+    "np.save(fm_dir + \"X_basic_aug.npy\", X_new_dataset)\n",
+    "np.save(fm_dir + \"y_basic_aug.npy\", y_new_dataset)\n",
     "\n",
-    "print(f\"Shape of the feature matrix : {X_aug.shape}\")\n",
+    "print(f\"Shape of the feature matrix : {X_basic_aug.shape}\")\n",
     "print(f\"------------------------------------------------------------\")\n",
     "print(f\"200 of each transformation. Order : chainsaw1, fire1, fireworks1, gun1, chainsaw2, fire2, ...\")\n"
    ]
@@ -201,22 +266,24 @@
     "os.makedirs(model_dir, exist_ok=True)\n",
     "\n",
     "# Load datasets\n",
-    "X = X_aug  # Augmented feature vectors\n",
-    "y = y_aug\n",
     "\n",
-    "X_basic = np.load(fm_dir + \"X_basic.npy\")  # Original dataset\n",
-    "y_basic = np.load(fm_dir + \"y_basic.npy\")\n",
+    "X_new_dataset = np.load(fm_dir + \"X_new_dataset.npy\")  # Original dataset\n",
+    "y_new_dataset = np.load(fm_dir + \"y_new_dataset.npy\")\n",
+    "\n",
+    "X_new_dataset_aug = np.load(fm_dir + \"X_new_dataset_aug.npy\")  # Original dataset\n",
+    "y_new_dataset_aug = np.load(fm_dir + \"y_new_dataset_aug.npy\")\n",
+    "\n",
     "\n",
     "# Split dataset into training and testing sets\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, stratify=y)\n",
-    "X_train_basic, X_test_basic, y_train_basic, y_test_basic = train_test_split(\n",
-    "    X_basic, y_basic, test_size=0.3, stratify=y_basic\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X_new_dataset, y_new_dataset, test_size=0.3, stratify=y_new_dataset)\n",
+    "X_train_aug, X_test_aug, y_train_aug, y_test_aug = train_test_split(\n",
+    "    X_new_dataset_aug, y_new_dataset_aug, test_size=0.3, stratify=y_new_dataset_aug\n",
     ")\n",
     "\n",
     "# ===== TRAIN MODEL WITH PCA =====\n",
     "pca = PCA(n_components=0.98)  # Keep 98% variance\n",
-    "X_train_pca = pca.fit_transform(X_train)\n",
-    "X_test_pca = pca.transform(X_test)  # Apply the same transformation to test data\n",
+    "X_train_aug_pca = pca.fit_transform(X_train_aug)\n",
+    "X_test_aug_pca = pca.transform(X_test_aug)  # Apply the same transformation to test data\n",
     "print(f\"Number of principal features kept: {pca.n_components_}\")\n",
     "\n",
     "# Save the PCA model separately\n",
@@ -233,7 +300,7 @@
     "    min_samples_leaf=2,\n",
     "    random_state=42\n",
     ")\n",
-    "rf_model_pca.fit(X_train_pca, y_train)\n",
+    "rf_model_pca.fit(X_train_aug_pca, y_train_aug)\n",
     "\n",
     "# Save the model trained **with PCA**\n",
     "rf_filename_pca = os.path.join(model_dir, \"model_pca.pickle\")\n",
@@ -249,7 +316,7 @@
     "    min_samples_leaf=2,\n",
     "    random_state=42\n",
     ")\n",
-    "rf_model_no_pca.fit(X_train, y_train)  # Train directly on raw `X_aug` features\n",
+    "rf_model_no_pca.fit(X_train_aug, y_train_aug)  # Train directly on raw `X_aug` features\n",
     "\n",
     "# Save the model trained **without PCA**\n",
     "rf_filename_no_pca = os.path.join(model_dir, \"model_without_pca.pickle\")\n",
@@ -265,7 +332,7 @@
     "    min_samples_leaf=2,\n",
     "    random_state=42\n",
     ")\n",
-    "rf_model_no_transform.fit(X_train_basic, y_train_basic)  # Train on untransformed data\n",
+    "rf_model_no_transform.fit(X_train, y_train)  # Train on untransformed data\n",
     "\n",
     "# Save the model trained **on X_basic (original features)**\n",
     "rf_filename_no_transform = os.path.join(model_dir, \"model_without_data_transformation.pickle\")\n",
@@ -279,11 +346,11 @@
     "# ===== TRAIN MODEL WITH NORMALIZATION =====\n",
     "X_train_normalized = []\n",
     "X_test_normalized = []\n",
-    "for i in range(len(X_train_basic)):\n",
-    "    X_train_normalized.append(X_train_basic[i]/np.linalg.norm(X_train_basic[i]))\n",
+    "for i in range(len(X_train)):\n",
+    "    X_train_normalized.append(X_train[i]/np.linalg.norm(X_train[i]))\n",
     "\n",
-    "for i in range(len(X_test_basic)):\n",
-    "    X_test_normalized[i] = X_test_basic[i]/np.linalg.norm(X_test_basic[i])\n",
+    "for i in range(len(X_test)):\n",
+    "    X_test_normalized.append(X_test[i]/np.linalg.norm(X_test[i]))\n",
     "    \n",
     "\n",
     "# Train the model on normalized features\n",
@@ -340,9 +407,9 @@
     "        print(f\"  Accuracy: {test_accuracy_per_class[i]:.4f}\")\n",
     "\n",
     "# Evaluate all models\n",
-    "evaluate_model(rf_model_pca, X_test_pca, y_test, \"Model WITH PCA\")\n",
+    "evaluate_model(rf_model_pca, X_test_aug_pca, y_test_aug, \"Model WITH PCA\")\n",
     "evaluate_model(rf_model_no_pca, X_test, y_test, \"Model WITHOUT PCA\")\n",
-    "evaluate_model(rf_model_no_transform, X_test_basic, y_test_basic, \"Model WITHOUT DATA TRANSFORMATION\")\n",
+    "evaluate_model(rf_model_no_transform, X_test, y_test, \"Model WITHOUT DATA TRANSFORMATION\")\n",
     "evaluate_model(rf_model_normalized, X_test_normalized, y_test, \"Model WITH NORMALIZATION\")\n"
    ]
   },
